--- a/css/style.css
+++ b/css/style.css
@@ -2,18 +2,25 @@ html {
     box-sizing: border-box;
 }
 
-*,
-::after,
-::before {
+*, ::after, ::before {
     box-sizing: inherit;
 }
 
 .body {
-    font-family: Lato, sans-serif;
-    color: #000000;
-    max-width: 1000px;
-    margin: 20px auto;
+    max-width: 1200px;
+    font-family: 'Lexend Deca', sans-serif;
+    margin: auto;
     padding: 20px;
-    background-color: #ededed;
-    overflow-wrap: anywhere; 
+    background-color: #8080801f;
+}
+
+@media (min-width:1700px) {
+    .body {
+        max-width: 2500px;
+    }
+}
+
+.mainHeader {
+    text-align: left;
+    width: 100%;
 }
